# IIT-CS553

./: .editorconfig  README.md
.ical/: classes.ics  exam.ics
assignments/: exam.md
assignments/hw1/: .shellcheckrc  README.md  _lib.sh  ai_prompts.md  benchmark_analysis.py  generate_dataset.sh  report.md  requirements.txt  setup.sh  sort_data.sh  sort_dataset.sh
assignments/hw2/: .shellcheckrc  README.md  _lib.sh  ai_prompts.md  benchmark_analysis.py  benchmark_result.json  cpu_benchmark.sh  disk_benchmark.sh  memory_benchmark.sh  network_benchmark_client.sh  network_benchmark_server.sh  report.md  requirements.txt  setup.sh  setup_container.sh  setup_vm.sh
assignments/hw3/: README.md  report.md
assignments/hw4/: .editorconfig  .gitignore  CMakeLists.txt  README.md  _lib.sh  benchmark.sh  benchmark_analysis.py  benchmark_result1.json  benchmark_result2.json  benchmark_result3.json  build.sh  report.md  setup.sh  test.sh
assignments/hw4/src/: colors.hpp  generating.cpp  generating.hpp  main.cpp  printing.cpp  printing.hpp  record.hpp  searching.cpp  searching.hpp  sorting.cpp  sorting.hpp  verifying.cpp  verifying.hpp
assignments/hw5/: .gitignore  README.md  _lib.py  _lib.sh  benchmark_analysis.py  benchmark_result1.json  benchmark_result2.json  build.gradle.kts  build.sh  cleanup.sh  core-site.xml  gradle.properties  hdfs-site.xml  launch_container.sh  mapred-site.xml  performance_benchmark.json  performance_benchmark.py  performance_graph.sh  report.md  requirements.txt  search_benchmark.json  search_benchmark.py  settings.gradle.kts  setup.sh  startup.sh  (+4 more)
(+10 files in other folders)
